# xPL

./: .gitignore  .gitmodules  README.md  TODO.md  Useful_Links.txt  jonToursTest.txt
base_network_code/: application.cpp  deamon.cpp  deamon.h  myecho.cpp  tcpserver.cpp  tcpserver.h
base_network_code/base_network_code/: base_network_code.cbp  base_network_code.depend  base_network_code.layout
base_network_code/socketcc/: ipaddress.cpp
src/: CMakeLists.txt  DayCondition.h  Determinator.cpp  Determinator.h  DeterminatorCondition.h  DeterminatorEnvironment.cpp  DeterminatorEnvironment.h  Dispatcher.h  Doxyfile.in  GlobalAction.cpp  GlobalAction.h  GlobalChangedCondition.cpp  GlobalCondition.cpp  GlobalManager.cpp  GlobalManager.h  LogAction.cpp  LogAction.h  TCPDaemon.cpp  TCPDaemon.h  TCPServer.cpp  TCPServer.h  TimeCondition.cpp  TimeCondition.h  XHCPDispatcher.cpp  XHCPDispatcher.h  XHCPServerConnection.cpp  XHCPServerConnection.h  XHCP_Parser.cpp  XHCP_Parser.h  XPLAction.cpp  XPLAction.h  XPLCommon.h  XPLCondition.cpp  XPLCondition.h  XPLHal.cpp  XPLHal.h  XPLParser.cpp  XPLParser.h  XPLRuleManager.cpp  XPLRuleManager.h  (+1 more)
src/actions/: CMakeLists.txt  DeterminatorAction.h  GlobalAction.cpp  GlobalAction.h  LogAction.cpp  LogAction.h  XPLAction.cpp  XPLAction.h
src/conditions/: CMakeLists.txt  DayCondition.cpp  DayCondition.h  DeterminatorCondition.h  GlobalChangedCondition.cpp  GlobalChangedCondition.h  GlobalCondition.cpp  GlobalCondition.h  TimeCondition.cpp  TimeCondition.h  XPLCondition.cpp  XPLCondition.h
src/events/: CMakeLists.txt  XHCPEvent.cpp  XHCPEvent.h
src/pugixml/: pugixml.cpp  pugixml.hpp
test/determinators/: 4201.xml  42011.xml  4202.xml  4203.xml  42031.xml  4204.xml  4a4728ee-086b-11e2-bfd1-001e0bb57a46.xml  4a473294-086b-11e2-99ce-001e0bb57a46.xml  4a4738e8-086b-11e2-bf44-001e0bb57a46.xml  4a473f3c-086b-11e2-a58e-001e0bb57a46.xml
test/determinators/low-medium-high/: .directory  1a8833ba-0acc-11e2-941a-001e0bb57a46.xml  1a883ec8-0acc-11e2-a3fb-001e0bb57a46.xml  1a88479c-0acc-11e2-9ab0-001e0bb57a46.xml  1a88505c-0acc-11e2-9ddf-001e0bb57a46.xml  343d3e28-1692-11e2-b33c-001e0bb57a46.xml  4203.xml  (+3 more)
xPL_codeblocks/: CMakeLists.txt  Determinator.cpp  Determinator.h  DeterminatorFactory.cpp  DeterminatorFactory.h  DeterminatorFactoryTest.cpp  DeterminatorReader.h  DeterminatorSerializer.cpp  DeterminatorSerializer.h  DeterminatorSerializerTest.cpp  DeterminatorTest.cpp  DeterminatorWriter.h  Dispatcher.h  MakeDeterminator  Makefile  RuleManager.cpp  RuleManager.h  RuleMngr.cpp  RuleMngr.h  TCPDeamon.cpp  TCPDeamon.h  TCPServer.cpp  TestRunner.cpp  XHCP_Parser.cpp  XHCP_Parser.h  XMLpugiXPL.cpp  XMLpugiXPL.h  XPLAction.cpp  XPLAction.h  XPLActionTest.cpp  XPLCondition.cpp  XPLCondition.h  XPLConditionTest.cpp  XPLHal.h  XPLMessage.cpp  XPLMessage.h  XPLParser.cpp  XPLParser.h  XPLRuleManager.cpp  XPLRuleManager.h  (+19 more)
xPL_codeblocks/codeblocks_stuff/: pref.workspace  xPLHal.cbp  xPLHal.depend
xPL_codeblocks/example/: 4203.xml  4204.xml
xPL_codeblocks/pthreadcc/: CMakeLists.txt
xPL_codeblocks/src/: CMakeLists.txt  Determinator.cpp  Determinator.h  DeterminatorAction.h  DeterminatorCondition.h  DeterminatorEnvironment.cpp  DeterminatorEnvironment.h  DeterminatorFactory.cpp  DeterminatorFactory.h  DeterminatorFactoryTest.cpp  DeterminatorSerializer.cpp  LogAction.cpp  LogAction.h  TCPDaemon.cpp  TCPDaemon.h  TCPServer.cpp  TestRunner.cpp  TimeCondition.cpp  TimeCondition.h  XHCPDispatcher.cpp  XHCPDispatcher.h  XHCP_Parser.cpp  XHCP_Parser.h  XPLAction.cpp  XPLAction.h  XPLCommon.h  XPLCondition.cpp  XPLCondition.h  XPLHal.cpp  XPLHal.h  XPLMessage.cpp  XPLMessage.h  XPLParser.cpp  XPLParser.h  XPLRuleManager.cpp  XPLRuleManager.h  determinator-main.cpp  projconfig.h.in  src.kdev4  xPLHal.layout
xPL_codeblocks/test/: DeterminatorFactoryTest.cpp  DeterminatorTest.cpp  PassByValueTest.cpp  TestRunner.cpp  XPLActionTest.cpp  XPLConditionTest.cpp  XPLMessageTest.cpp  boostTest.cpp
xPL_codeblocks/xPLLib/: CHANGELOG.txt  CMakeLists.txt  INSTALL.txt  Makefile  xPL-config.c  xPL-hub.c  xPL-io.c  xPL-listeners.c  xPL-message.c  xPL-service.c  xPL-store.c  xPL-utils.c  xPL.h  xPL_priv.h
(+28 files in other folders)
